tests/good/01_03_types_variables_assignments_1.ris
void main():
    let int a;
    println a;

    a = 42;
    println a;

    a++;
    println a;

    a--;
    println a;

    let bool b;
    println b;
    
    b = true;
    println b;
    
    let string c = "foo";
    println c;

    return;