tests/bad/bad-minus-type.ris
void main():
    print 42 - "foo";
    return;